--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "dependencies": {
     "async-retry": "^1.3.3",
     "dotenv": "^14.3.0",
-    "performance-results-parser": "0.0.4",
+    "performance-results-parser": "LApps-Approved-Actions/parser#fix-TypeError",
     "phin-retry": "^1.0.3",
     "pretty-ms": "^7.0.0",
     "rosters": "0.0.1",
