--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
   "dependencies": {
     "async-retry": "^1.3.3",
     "dotenv": "^14.3.0",
-    "performance-results-parser": "LApps-Approved-Actions/parser#fix-TypeError",
+    "performance-results-parser": "0.0.4",
     "phin-retry": "^1.0.3",
     "pretty-ms": "^7.0.0",
     "rosters": "0.0.1",
     "sade": "^1.7.4",
-    "test-results-parser": "^0.1.2"
+    "test-results-parser": "LApps-Approved-Actions/parser#fix-TypeError"
   },
   "devDependencies": {
     "c8": "^7.12.0",
